fix tr-ex spacing;

--- a/static/tr-ex.css
+++ b/static/tr-ex.css
@@ -68,5 +68,6 @@ a.ctx-link {
 }
 */
 .ctx{
-    margin-block-start: 5px;
+    margin-block-start: 6px;
+    margin-block-start: 6px;
 }
